# ACME_CapitalIQ_IdentityReco

./: .env.example  .gitignore  BUNDLE_QUICK_START.md  CHANGES_SUMMARY.md  CRITICAL_BLOCKERS_RESOLVED.md  CUSTOM_ENDPOINT_GUIDE.md  DAB_TEST_DATA_LOADING_GUIDE.md  DATABRICKS_DEPLOYMENT_GAPS.md  DATABRICKS_PATH_ALIGNMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_SUMMARY.md  EMBEDDINGS_CHANGES_SUMMARY.md  EMBEDDINGS_PROVIDER_GUIDE.md  FIX_NULL_COMPANY_NAME.md  GETTING_STARTED.md  LARGE_SCALE_TEST_DATA_GUIDE.md  LICENSE  LICENSE_SUMMARY.md  LICENSE_UPDATE_SUMMARY.md  MANIFEST.in  MIGRATION_NOTICE.md  MODEL_SERVING_GAPS.md  Makefile  NOTICE  PHASE2_SPLIT_GUIDE.md  PHASE3_4_CRITICAL_FIXES_APPLIED.md  PHASE3_4_MIGRATION_FINDINGS.md  PHASED_DEPLOYMENT_CONFIGS.md  PHASE_DEPLOYMENT_SUMMARY.md  POC_TESTING_CHECKLIST.md  QUICK_REFERENCE_TEST_DATA.md  QUICK_START.md  QUICK_START_LARGE_SCALE_TEST.md  README.md  SPARK_CONNECT_GUIDE.md  SPARK_CONNECT_README.md  SPARK_CONNECT_SETUP.md  SPARK_CONNECT_SUCCESS.md  (+27 more)
.claude/skills/: DABS_MIGRATION_CHEATSHEET.md  INDEX.md  MIGRATION_TEMPLATE.md  README.md  WORKFLOW_DIAGRAM.md  databricks-dabs-migration.md
docs/: MEDIUM_ARTICLE.md  medium_article.html
docs/images/: architecture.mmd  problem_solution.mmd  roi_comparison.mmd
documentation/: BUNDLE_DEPLOYMENT_SUMMARY.md  CHANGES_SUMMARY.md  DATABRICKS_BUNDLE_DEPLOYMENT.md  DATABRICKS_SERVERLESS_SETUP.md  DEFAULT_BEHAVIOR_UPDATE.md  IMPLEMENTATION_SUMMARY.md  LOCAL_TESTING_GUIDE.md  PHASE_DEPLOYMENT_SUMMARY.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_SETUP.md  README_IMPROVEMENTS.md  SPARK_CONNECT_DEFAULT_SUMMARY.md  SPARK_CONNECT_GUIDE.md  SPARK_CONNECT_SETUP.md  TESTING_CHEATSHEET.md  TESTING_GUIDE.md  entity-matching-models-summary.md  genai-identity-reconciliation-poc.md
documentation/working-notes/: DEPLOYMENT_READY_SUMMARY.md  POC_TESTING_CHECKLIST.md  REMAINING_ISSUES_FIXED.md  SKILL_CREATION_COMPLETE.md  SKILL_PACKAGE_SUMMARY.md  WORKSPACE_PATH_FIX_APPLIED.md  WORKSPACE_PATH_VERIFICATION.md
notebooks/: 01_quick_start.py  02_train_ditto_model.py  02a_train_ditto_model.py  02b_register_evaluate_model.py  03_full_pipeline_example.py  04_spark_connect_example.py
notebooks/pipeline/: 01_ingest_source_entities.py  02_exact_match.py  03_vector_search_ditto.py  04_write_results.py  05_generate_metrics.py
notebooks/setup/: 01_create_unity_catalog.py  02_create_reference_tables.py  03_load_large_test_dataset.py  03_register_model.py
resources/: jobs.yml  jobs.yml.bak  jobs_phase0_catalog.yml  jobs_phase1_data.yml  jobs_phase2_training.yml  jobs_phase2b_registration.yml  jobs_phase3_serving.yml  jobs_phase4_pipeline.yml  jobs_pipeline.yml  jobs_setup_training.yml  model_serving.yml  pipelines.yml
resources/notebooks/setup/: 01_create_unity_catalog.py
scripts/: README.md  create_catalog.py  generate_test_data_csv.py
src/: __init__.py  config.py
src/data/: __init__.py  large_dataset_generator.py  loader.py  preprocessor.py  training_generator.py
src/evaluation/: __init__.py  metrics.py  validator.py
src/models/: __init__.py  databricks_embeddings.py  ditto_matcher.py  embeddings.py  foundation_model.py  vector_search.py
src/pipeline/: __init__.py  exact_match.py  hybrid_pipeline.py
src/utils/: __init__.py  spark_utils.py
tests/: test_pipeline.py
