[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "entity-matching-capitaliq"
version = "1.0.0"
description = "GenAI-powered entity matching for S&P Capital IQ identity reconciliation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Laurent Prat", email = "laurent.prat@databricks.com"}
]
keywords = ["databricks", "entity-matching", "machine-learning", "spark-connect", "capital-iq"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyspark>=3.4.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "sentence-transformers>=2.3.0",
    "databricks-sdk>=0.18.0",
    "mlflow>=2.9.0",
    "gliner>=0.1.0",
    "faiss-cpu>=1.7.4",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "tqdm>=4.65.0",
    "scikit-learn>=1.3.0",
    "pyarrow>=12.0.0",
    "delta-spark>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
viz = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
]

[project.urls]
Homepage = "https://github.com/LaurentPRAT-DB/MET_CapitalIQ_identityReco"

[project.scripts]
train_ditto = "src.models.ditto_matcher:train_cli"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
src = ["*.py"]
